--- a/Modul_2/mod2_solution/modul2_solution:index.html
+++ b/Modul_2/mod2_solution/modul2_solution:index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Assignment Solution for Module2</title>
-    <link href="coursera-test/Modul_2/mod2_solution:css/modul2_stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="modul2_stylesheet.css" rel="stylesheet" type="text/css">
   </head>
   <body>
 
